// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertStatus should create a default error alert with message 1`] = `
<div>
  <div
    class="sc-bczRLJ iCnwms"
  >
    <span
      class="sc-gsnTZi uwVHT"
    >
      ×
    </span>
    Error Message
  </div>
</div>
`;

exports[`AlertStatus should create an alert error 1`] = `
<div>
  <div
    class="sc-bczRLJ iCnwms"
  >
    <span
      class="sc-gsnTZi uwVHT"
    >
      ×
    </span>
    Error Message
  </div>
</div>
`;

exports[`AlertStatus should create an alert info 1`] = `
<div>
  <div
    class="sc-bczRLJ kjDySB"
  >
    <span
      class="sc-gsnTZi uwVHT"
    >
      ×
    </span>
    Info messsage
  </div>
</div>
`;

exports[`AlertStatus should create an alert success 1`] = `
<div>
  <div
    class="sc-bczRLJ cIHGbZ"
  >
    <span
      class="sc-gsnTZi uwVHT"
    >
      ×
    </span>
    Success messsage
  </div>
</div>
`;

exports[`AlertStatus should create an alert warning 1`] = `
<div>
  <div
    class="sc-bczRLJ bQrCLp"
  >
    <span
      class="sc-gsnTZi uwVHT"
    >
      ×
    </span>
    Warning messsage
  </div>
</div>
`;

exports[`AlertStatus should create no alert when no message associated 1`] = `<div />`;
